# PyamilySeq

./: .gitignore  README.md  _config.yml  index.md  paper.md  pyproject.toml  setup.cfg
aux_tools/: .~lock.distinct_groups_with_74_genes.csv#  COG_counter.py  compare_gpa.py  compare_trees.py  csv_to_another_csv.py  csv_to_graph_new.py  csv_to_graphml.py  csv_to_graphml_nosingles.py  csv_to_graphml_pruned.py  csv_to_graphml_sourcefile.py  extract_fasta_by_csv.py
aux_tools/RF/: Compute_SingleTree_RFs.py  RF_matrix_plotting.py  compare_RF.py  compare_contree_singletrees.py  compare_trees_rf.py  compute_RF.sh  compute_rf_matrix_norm_0_1.py  get_Roary_SGTree_RFs.py  matrix_plots.py  plotting.py  rf_matrix.csv  rf_summary.txt  singles_vs_concat.csv
aux_tools/cluster_to_ven/: cluster_to_ven.py  clusters_to_upset.py
paper/: paper.bib  paper.md
paper/genus_data/: .~lock.genera_counts.txt#  genera_counts.txt  genera_list.txt  genera_tree.txt  gnera_tree.phy
scripts/: diagnose_self_neighbors.py  inspect_family.py  outfmt6_parsing_lineage.py  pyamilyseq_geneorder_representation.py  track_family_locations.py
src/PyamilySeq/: CD-Hit_StORF-Reporter_Pangenome_Builder.py  Cluster_Compare.py  Cluster_Summary.py  Constants.py  Ensem_Clusters_Without_StORFs  Ensem_Clusters_Without_StORFs_min2  Group_Compare.py  Group_Extractor.py  Group_Sizes.py  Group_Splitter.py  Group_Splitter.py.pclprof  Group_Summary.py  PyamilySeq.py  PyamilySeq_Genus.py  PyamilySeq_Species.py  PyamilySeq_Species.py.pclprof  Seq_Combiner.py  Seq_Extractor.py  Seq_Finder.py  clusterings.py  combine_FASTA_with_genome_IDs.py  constants.py  location_tracking.py  utils.py
supp_data/: .~lock.74_Panaroo_gene_presence_absence_roary.csv#  E-coli_Panaroo_group_19619.fasta  E-coli_Panaroo_group_19619_aa.fasta  E-coli_Panaroo_group_20221.fasta  E-coli_Panaroo_group_20221_aa.fasta  E-coli_Panaroo_group_21166.fasta  E-coli_Panaroo_group_21166_aa.fasta  PyamilySeq_DNA_74_testing_90_20_cluster_stats.tsv  clustering_CD-HIT_AA_90_20_summary.tsv
test_data/: combined_StORFs.fasta
test_data/CD-HIT/: combined_Ensmbl_pep_CD_90_60.fasta
test_data/CD-HIT/Gene_Families_Output/: first_core_99_100.fasta  first_core_99_1000.fasta  first_core_99_1001.fasta  first_core_99_1002.fasta  first_core_99_1003.fasta  first_core_99_1004.fasta  first_core_99_1005.fasta  first_core_99_1006.fasta  first_core_99_1007.fasta  first_core_99_1008.fasta  first_core_99_1009.fasta  first_core_99_101.fasta  first_core_99_1010.fasta  first_core_99_1011.fasta  first_core_99_1012.fasta  first_core_99_1013.fasta  first_core_99_1014.fasta  first_core_99_1015.fasta  first_core_99_1016.fasta  first_core_99_1017.fasta  (+3350 more)
test_data/CSVs/: Panaroo_gene_presence_absence_roary.csv  Roary_aligned_cpu8_gene_presence_absence.csv
test_data/MMseqs2/: combined_Ensmbl_pep_mmseqs2_with_StORFs_rep_seq.fasta
test_data/genomes/: Escherichia_coli_110957_gca_000485615.ASM48561v1.gff3  Escherichia_coli_110957_gca_000485615.ASM48561v1_StORF-Reporter_Extended.gff  Escherichia_coli_113290_gca_000485635.ASM48563v1.gff3  Escherichia_coli_113290_gca_000485635.ASM48563v1_StORF-Reporter_Extended.gff  Escherichia_coli_2_177_06_s3_c2_gca_000704005.ASM70400v1.gff3  Escherichia_coli_4_0522_gca_000194335.ASM19433v2_StORF-Reporter_Extended_aa.fasta  Escherichia_coli_536_gca_000013305.ASM1330v1.gff3  Escherichia_coli_5_366_08_s1_c1_gca_000714255.ASM71425v1.gff3  Escherichia_coli_5_366_08_s1_c1_gca_000714255.ASM71425v1_StORF-Reporter_Extended_aa.fasta
test_data/genus/: combined_StORFs_pep.fasta  combined_cds_cd-hit.clstr  combined_cds_cd-hit_And_StORFs_cd-hit.clstr  combined_cds_cd-hit_gene_presence_absence.csv
test_data/multi_test/: PyamilySeq_params.txt  gene_presence_absence.csv  summary_statistics.txt
test_data/panaroo_out/: .~lock.gene_presence_absence.csv#  .~lock.gene_presence_absence_roary.csv#  combined_protein_cdhit_out.txt.clstr  core_gene_alignment.nwk  gene_presence_absence.Rtab  gene_presence_absence_roary.csv  struct_presence_absence.Rtab  summary_statistics.txt
test_data/roary_out/: accessory.tab  accessory_binary_genes.fa  accessory_binary_genes.fa.newick  clustered_proteins  core_accessory.header.embl  core_accessory_graph.dot  core_alignment_header.embl  gene_presence_absence.csv  number_of_conserved_genes.Rtab  number_of_new_genes.Rtab  number_of_unique_genes.Rtab
test_data/species/: combined_StORFs_cds.fasta  combined_StORFs_pep.fasta
test_data/tmp/: latest
tests/: test_location_tracking.py
(+3538 files in other folders)
