[build-system]
requires = ["setuptools", "wheel", "levenshtein"]
build-backend = "setuptools.build_meta"

[project]
name = "PyamilySeq"
version = "1.3.1"
authors = [
    {name = "Nicholas Dimonaco", email = "nicholas@dimonaco.co.uk"}
]
description = "PyamilySeq - A a tool to investigate sequence-based gene groups identified by clustering methods such as CD-HIT, DIAMOND, BLAST or MMseqs2."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Pangenomics", "Sequence Clustering", "Gene Families"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/NickJD/PyamilySeq"
"Bug Tracker" = "https://github.com/NickJD/PyamilySeq/issues"

[project.scripts]
    PyamilySeq = "PyamilySeq.PyamilySeq:main"
    pyamilyseq = "PyamilySeq.PyamilySeq:main"
    Seq-Combiner = "PyamilySeq.Seq_Combiner:main"
    seq-combiner = "PyamilySeq.Seq_Combiner:main"
    Group-Splitter = "PyamilySeq.Group_Splitter:main"
    group-splitter = "PyamilySeq.Group_Splitter:main"
    Cluster-Summary = "PyamilySeq.Cluster_Summary:main"
    cluster-summary = "PyamilySeq.Cluster_Summary:main"
    Cluster-Extractor = "PyamilySeq.Cluster_Extractor:main"
    cluster-extractor = "PyamilySeq.Cluster_Extractor:main"
    Seq-Finder = "PyamilySeq.Seq_Finder:main"
    seq-finder = "PyamilySeq.Seq_Finder:main"
    Seq-Extractor = "PyamilySeq.Seq_Extractor:main"
    seq-extractor = "PyamilySeq.Seq_Extractor:main"

    compute-singletrees-rf = "aux_tools.RF.Compute_SingleTree_RFs:main"
    compare-rf = "aux_tools.RF.compare_RF:main"
    compare-contree-singletrees = "aux_tools.RF.compare_contree_singletrees:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["PyamilySeq*"]

[tool.setuptools.package-data]
PyamilySeq = [

]