[metadata]
name = PyamilySeq
version = v0.5.0
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = PyamilySeq - A a tool to look for sequence-based gene families identified by clustering methods such as CD-HIT, DIAMOND, BLAST or MMseqs2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/PyamilySeq
project_urls =
    Bug Tracker = https://github.com/NickJD/PyamilySeq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    #numpy
[options.packages.find]
where = src
include = *


[options.entry_points]
console_scripts =
    PyamilySeq = PyamilySeq.PyamilySeq:main
    Seq-Combiner = PyamilySeq.Seq_Combiner:main
