[metadata]
name = PyamilySeq
version = v1.1.1
license_files = LICENSE
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = PyamilySeq - A a tool to investigate sequence-based gene groups identified by clustering methods such as CD-HIT, DIAMOND, BLAST or MMseqs2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/PyamilySeq
project_urls =
    Bug Tracker = https://github.com/NickJD/PyamilySeq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    levenshtein
[options.packages.find]
where = src
include = *


[options.entry_points]
console_scripts =
    PyamilySeq = PyamilySeq.PyamilySeq:main
    pyamilyseq = PyamilySeq.PyamilySeq:main
    Seq-Combiner = PyamilySeq.Seq_Combiner:main
    seq-combiner = PyamilySeq.Seq_Combiner:main
    Group-Splitter = PyamilySeq.Group_Splitter:main
    group-splitter = PyamilySeq.Group_Splitter:main
    Cluster-Summary = PyamilySeq.Cluster_Summary:main
    cluster-summary = PyamilySeq.Cluster_Summary:main
    Seq-Finder = PyamilySeq.Seq_Finder:main
    seq-finder = PyamilySeq.Seq_Finder:main
    Seq-Extractor = PyamilySeq.Seq_Extractor:main
    seq-extractor = PyamilySeq.Seq_Extractor:main

